--- a/_knitr_hooks.qmd
+++ b/_knitr_hooks.qmd
@@ -6,7 +6,7 @@
 redact <- function(x) {
   stringr::str_replace_all(
     x,
-    "/Users/(jkeane|npr).*/(PUMS_smol|PUMS cleaned)/",
+    "/(Users|home)/(jkeane|npr|nic).*/(PUMS_smol|PUMS cleaned)/",
     "./data/"
   )
 }
@@ -15,10 +15,27 @@ default_hook_output <- knitr::knit_hooks$get("output")
 
 custom_hook_output <- function(x, options) {
   x <- redact(x)
-  n <- options$out.lines
-  if(!is.null(n)) {
+  n_lines <- options$height_limit
+  if(!is.null(n_lines)) {
     x <- xfun::split_lines(x)
-    if (length(x) > n) x <- c(head(x, n), "....\n")
+    if (length(x) > n_lines) {
+      x <- c(head(x, n_lines), "...\n")
+    } 
+    x <- paste(x, collapse = "\n")
+  }
+
+  n_chars <- options$width_limit
+  if(!is.null(n_chars)) {
+    x <- xfun::split_lines(x)
+    x <- lapply(
+      x,
+      function(line) { 
+        if (nchar(line) > n_chars) {
+          line <- paste0(strtrim(line, n_chars),  "...")
+        } 
+        line
+      }
+    )
     x <- paste(x, collapse = "\n")
   }
   default_hook_output(x, options)
